# Better-python-testing

./: .breakpoints  .coveragerpc  .deepsource.toml  .gitignore  .replit  .style.py  Dockerfile  Jenkinsfile  LICENSE  README.md  SECURITY.md  Test.py  dev-requirements.txt  format.txt  game.py  gametest.py  hello.py  input_handlers.py  main.py  playground.py  pyproject.toml  renovate.json  requirements.txt  server.py  smile.py  sneak.py  stats.py  test.py  test_colorama.py  test_sneak.py  typey.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: codeql-config.yml  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: Everything.yml  build.yml  cacher.yml  codeql-analysis.yml  codeql-config.yml  coverage.yml  format-python.yml  main.yml  pyinstaller-build.yml  pytest.yml  python-package.yml  python.yml  windows-build.yml
.upm/: store.json
docs/: home.md  homepage.md  readme.md
examples/: attack.py  game.py  inventory.py  inventorydict.py  pygame.py  sneak.py  stats.py  type.py  typing.py
htmlcov/: index.html  status.json  tests_test_items_py.html  tests_test_sneak_py.html  tests_test_type_py.html
johnny/: john.py
muddev/mygame/server/conf/: settings.py
roguelike/: engine.py  main.py
src/: combat.py  inventory.py  player.py  sneak.py
tests/: Attacktesting.py  attack.py  inventory.py  inventoryclass.py  sneak.py  test_benchmark.py  test_inputs.py  test_inventory.py  test_inventorydict.py  test_items.py  test_npcs.py  test_player.py  test_sneak  test_sneak.py  test_type.py  test_typey.py  typey.py
