[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry>=1.0"]

[tool]
[tool.poetry]
authors = ["Dragonlord1005 68302450+Dragonlord1005@users.noreply.github.com"]
description = ""
name = "Python-text-based-game-framework"
version = "0.0.2"
readme = "README.md"
license = "MIT"
[tool.poetry.dependencies]
python = "^3.8"
pyinstaller = "^4.5.1"
poethepoet = "^0.12.0"
black = "^21.12b0"
typety = "^1.0.3"
[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
coverage = "^6.2"
pytest-cov = "^3.0"
pytest-sugar = "^0.9.4"
pytest-randomly = "^3.11.0"
flake8 = "^4.0.1"
[tool.poe.tasks]
test = "pytest --cov-config=.coveragerpc --cov-report term-missing --cov --cov-branch"
format = "black ."

[tool.black]
target-version = ['py38']
